# Base_Core

./: README.md  pyproject.toml  setup_env.ps1
base_core/fitting/: functions.py
base_core/framework/app/: __init__.py  app_message.py  context.py  service_status.py
base_core/framework/concurrency/: interfaces.py  models.py  task_runner.py
base_core/framework/events/: event_bus.py
base_core/framework/log/: __init__.py  setup.py
base_core/framework/modules/: base_module.py  module_manager.py
base_core/framework/routines/: __init__.py  routine.py  routine_base.py  step.py
base_core/framework/serialization/: serde.py  serialization.py
base_core/framework/shm/: __init__.py  buffer.py  messages.py  slot_coordinator.py  spec.py  writer_service.py  writer_subprocess_main.py  writer_worker.py  writer_worker_handle.py
base_core/ipc/: __init__.py  codec.py  message.py  service_connector.py  subprocess_connector.py  subprocess_main.py  subprocess_service.py  threaded_worker.py  worker.py  worker_handle.py  worker_messages.py
base_core/lab_specifics/: base_models.py
base_core/math/: enums.py  functions.py  models.py
base_core/physics/: molecules.py  optical_centrifuge.py
base_core/plotting/: enums.py  histogram_plotting.py
base_core/quantities/: constants.py  enums.py  models.py  molecules.py  molecules_curve_once.py  molecules_median_curve.py  molecules_tdse.py  molecules_updated.py  molecules_wall_project_curve_v2.py  molecules_wall_switch_curve.py  molecules_weighted_inverse_curve.py  specific_models.py
base_lib/: fitting.py  models.py
(+19 files in other folders)
